--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>林星潼 - 个人网站</title>
+    <title>Xingtong Lin | 林星潼</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <div class="nav-container">
-                <div class="logo">林星潼</div>
-                <div class="nav-links">
-                    <a href="#home" class="active">首页</a>
-                    <a href="#portfolio">作品集</a>
-                    <a href="#about">关于我</a>
-                    <a href="#contact">联系方式</a>
-                    <div class="language-switch">
-                        <button onclick="switchLanguage('zh')" class="active">中文</button>
-                        <button onclick="switchLanguage('en')">English</button>
-                    </div>
+                <div class="nav-left">
+                    <a href="#home" class="nav-link active">Home</a>
+                    <a href="#portfolio" class="nav-link">Portfolio</a>
+                    <a href="#about" class="nav-link">About Me</a>
+                    <a href="#contact" class="nav-link">Contact</a>
+                </div>
+                <div class="nav-right">
+                    <button class="language-switch" onclick="switchLanguage()">
+                        <span class="current-lang">EN</span>
+                    </button>
+                    <a href="https://www.instagram.com/louisalxt" target="_blank" class="social-icon">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/lxt/" target="_blank" class="social-icon">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -29,48 +36,112 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1>林星潼</h1>
-                <p class="subtitle">卡耐基梅隆大学学生</p>
-                <div class="cta-buttons">
-                    <a href="#portfolio" class="btn primary">查看作品</a>
-                    <a href="cv.pdf" class="btn secondary" download>下载简历</a>
+                <div class="hero-text">
+                    <p class="welcome-text">Hi, welcome to</p>
+                    <h1 class="name">Xingtong Lin</h1>
+                    <p class="world-text">'s world...</p>
+                    <div class="bio">
+                        <p>I am a freshman studying at Carnegie Mellon University, a musician (non-professional type), a traveler, and an animal lover. I really relish the process of exploring what I love and passionate about, building up my own academic skills, solving problems for a more glamorous world.</p>
+                    </div>
+                </div>
+                <div class="profile-image">
+                    <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image">
                 </div>
             </div>
         </section>
 
-        <section id="portfolio" class="portfolio">
-            <h2>精选作品</h2>
-            <div class="gallery">
+        <section id="portfolio" class="gallery">
+            <h2>Gallery</h2>
+            <div class="gallery-grid">
                 <!-- 作品项目将通过JavaScript动态加载 -->
+                <div class="gallery-item">
+                    <img src="images/placeholder1.jpg" alt="Project 1">
+                    <h3>Project Title 1</h3>
+                </div>
+                <div class="gallery-item">
+                    <img src="images/placeholder2.jpg" alt="Project 2">
+                    <h3>Project Title 2</h3>
+                </div>
+                <div class="gallery-item">
+                    <img src="images/placeholder3.jpg" alt="Project 3">
+                    <h3>Project Title 3</h3>
+                </div>
             </div>
         </section>
 
         <section id="about" class="about">
-            <h2>关于我</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>我是卡耐基梅隆大学的一名学生，专注于探索艺术与技术的交汇点。</p>
-                    <p>通过我的作品，我希望能够激发思考，创造价值，并与世界分享我的视角。</p>
+            <div class="about-header">
+                <h2>About Me</h2>
+                <div class="basic-info">
+                    <div class="profile-section">
+                        <img src="images/profile.jpg" alt="Xingtong Lin" class="profile-image">
+                        <div class="info-text">
+                            <h3>Xingtong Lin</h3>
+                            <p>Carnegie Mellon University</p>
+                            <p>Class of 2028</p>
+                            <p>Neuroscience + Biomedical Technology (BME)</p>
+                            <a href="cv.pdf" class="cv-download" download>
+                                <i class="fas fa-download"></i> Download CV
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="more-about">
+                <h3>More About Me</h3>
+                <div class="three-columns">
+                    <div class="column research">
+                        <h4>Current Research</h4>
+                        <div class="content-box" onclick="window.location.href='research.html'">
+                            <p>I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a></p>
+                            <div class="research-description">
+                                <!-- 这里可以添加您的研究描述 -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column dog">
+                        <h4>My Dog</h4>
+                        <div class="content-box">
+                            <img src="images/dog.jpg" alt="My Dog" class="dog-image">
+                            <div class="dog-description">
+                                <!-- 这里可以添加您的狗狗介绍 -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column travel">
+                        <h4>Performing & Traveling</h4>
+                        <div class="content-box" onclick="window.location.href='travel.html'">
+                            <p>A collection of my performances and travel memories</p>
+                            <div class="travel-preview">
+                                <!-- 这里可以添加预览图片 -->
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section id="contact" class="contact">
-            <h2>联系方式</h2>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <a href="mailto:your.email@example.com" class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>your.email@example.com</span>
-                    </a>
-                    <a href="https://github.com/yourusername" class="contact-item" target="_blank">
-                        <i class="fab fa-github"></i>
-                        <span>GitHub</span>
-                    </a>
-                    <a href="https://linkedin.com/in/yourusername" class="contact-item" target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                        <span>LinkedIn</span>
-                    </a>
+            <h2>Contact</h2>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <span>xingtongl@andrew.cmu.edu</span>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-phone"></i>
+                    <span>(+1) 412-608-5710 / (+86) 139-1096-9793</span>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/lxt/" target="_blank">LinkedIn Profile</a>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-instagram"></i>
+                    <a href="https://www.instagram.com/louisalxt" target="_blank">@louisalxt</a>
                 </div>
             </div>
         </section>
@@ -78,9 +149,9 @@
 
     <footer>
         <div class="footer-content">
-            <p class="blessing">愿你的未来充满无限可能</p>
-            <p class="blessing-en">May your future be filled with endless possibilities</p>
-            <p class="copyright">© 2024 林星潼. All rights reserved.</p>
+            <p class="blessing">May your future be filled with endless possibilities</p>
+            <p class="blessing-zh">愿你的未来充满无限可能</p>
+            <p class="copyright">© 2024 Xingtong Lin. All rights reserved.</p>
         </div>
     </footer>
 
