--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="glass-effect">
         <nav>
             <div class="nav-container">
                 <div class="nav-left">
@@ -50,26 +50,25 @@
             </div>
         </section>
 
-        <section id="portfolio" class="gallery">
+        <section id="portfolio" class="portfolio glass-effect">
             <h2>Gallery</h2>
-            <div class="gallery-grid">
-                <!-- 作品项目将通过JavaScript动态加载 -->
-                <div class="gallery-item">
-                    <img src="images/placeholder1.jpg" alt="Project 1">
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="images/project1.jpg" alt="Project 1">
                     <h3>Project Title 1</h3>
                 </div>
-                <div class="gallery-item">
-                    <img src="images/placeholder2.jpg" alt="Project 2">
+                <div class="portfolio-item">
+                    <img src="images/project2.jpg" alt="Project 2">
                     <h3>Project Title 2</h3>
                 </div>
-                <div class="gallery-item">
-                    <img src="images/placeholder3.jpg" alt="Project 3">
+                <div class="portfolio-item">
+                    <img src="images/project3.jpg" alt="Project 3">
                     <h3>Project Title 3</h3>
                 </div>
             </div>
         </section>
 
-        <section id="about" class="about">
+        <section id="about" class="about glass-effect">
             <div class="about-header">
                 <h2>About Me</h2>
                 <div class="basic-info">
@@ -91,7 +90,7 @@
             <div class="more-about">
                 <h3>More About Me</h3>
                 <div class="three-columns">
-                    <div class="column research">
+                    <div class="column research glass-effect">
                         <h4>Current Research</h4>
                         <div class="content-box" onclick="window.location.href='research.html'">
                             <p>I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a></p>
@@ -101,7 +100,7 @@
                         </div>
                     </div>
 
-                    <div class="column dog">
+                    <div class="column dog glass-effect">
                         <h4>My Dog</h4>
                         <div class="content-box">
                             <img src="images/dog.jpg" alt="My Dog" class="dog-image">
@@ -111,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div class="column travel">
+                    <div class="column travel glass-effect">
                         <h4>Performing & Traveling</h4>
                         <div class="content-box" onclick="window.location.href='travel.html'">
                             <p>A collection of my performances and travel memories</p>
@@ -124,7 +123,7 @@
             </div>
         </section>
 
-        <section id="contact" class="contact">
+        <section id="contact" class="contact glass-effect">
             <h2>Contact</h2>
             <div class="contact-info">
                 <div class="contact-item">
@@ -147,7 +146,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="glass-effect">
         <div class="footer-content">
             <p class="blessing">May your future be filled with endless possibilities</p>
             <p class="blessing-zh">愿你的未来充满无限可能</p>
