--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
         <nav>
             <div class="nav-container">
                 <div class="nav-left">
-                    <a href="#home" class="nav-link active">Home</a>
-                    <a href="#portfolio" class="nav-link">Portfolio</a>
-                    <a href="#about" class="nav-link">About Me</a>
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="index.html" class="nav-link active">Home</a>
+                    <a href="about.html" class="nav-link">About Me</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </div>
                 <div class="nav-right">
                     <button class="language-switch" onclick="switchLanguage()">
@@ -45,28 +44,13 @@
                     </div>
                 </div>
                 <div class="profile-image">
-                    <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image">
+                    <img src="images/profile2.jpg" alt="Xingtong Lin" class="circular-image">
                 </div>
             </div>
         </section>
 
-        <section id="portfolio" class="portfolio glass-effect">
-            <h2>Gallery</h2>
-            <div class="portfolio-grid">
-                <div class="portfolio-item">
-                    <img src="images/project1.jpg" alt="Project 1">
-                    <h3>Project Title 1</h3>
-                </div>
-                <div class="portfolio-item">
-                    <img src="images/project2.jpg" alt="Project 2">
-                    <h3>Project Title 2</h3>
-                </div>
-                <div class="portfolio-item">
-                    <img src="images/project3.jpg" alt="Project 3">
-                    <h3>Project Title 3</h3>
-                </div>
-            </div>
-        </section>
+        <!-- Gallery部分暂时隐藏 -->
+        <!-- <section id="portfolio" class="portfolio glass-effect"> ... </section> -->
 
         <section id="about" class="about glass-effect">
             <div class="about-header">
@@ -91,8 +75,8 @@
                 <h3>More About Me</h3>
                 <div class="three-columns">
                     <div class="column research glass-effect">
-                        <h4>Current Research</h4>
-                        <div class="content-box" onclick="window.location.href='research.html'">
+                        <h4 class="research-title">Current Research</h4>
+                        <div class="content-box">
                             <p>I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a></p>
                             <div class="research-description">
                                 <!-- 这里可以添加您的研究描述 -->
@@ -149,7 +133,7 @@
     <footer class="glass-effect">
         <div class="footer-content">
             <p class="blessing">May your future be filled with endless possibilities</p>
-            <p class="blessing-zh">愿你的未来充满无限可能</p>
+            <p class="blessing-zh" style="display:none;">愿你得偿所愿</p>
             <p class="copyright">© 2024 Xingtong Lin. All rights reserved.</p>
         </div>
     </footer>
