--- a/about.html
+++ b/about.html
@@ -32,19 +32,44 @@
         </nav>
     </header>
     <main>
-        <section class="about glass-effect" style="margin-top:100px;">
+        <section class="about glass-effect" style="margin-top:80px;">
             <div class="about-header">
-                <h2>About Me</h2>
                 <div class="profile-section">
-                    <img src="images/profile2.jpg" alt="Xingtong Lin" class="circular-image">
+                    <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image" style="width:200px;height:200px;object-fit:cover;border-radius:50%;border:4px solid #fff;">
                     <div class="info-text">
-                        <h3>Xingtong Lin</h3>
-                        <p>Carnegie Mellon University</p>
-                        <p>Class of 2028</p>
-                        <p>Neuroscience + Biomedical Technology (BME)</p>
-                        <a href="cv.pdf" class="cv-download" download>
-                            <i class="fas fa-download"></i> Download CV
-                        </a>
+                        <h3 class="about-name">Xingtong (Louisa) Lin</h3>
+                        <p class="about-school">Carnegie Mellon University</p>
+                        <p class="about-year">Class of 2028</p>
+                        <p class="about-major">Neuroscience + Biomedical Technology (BME)</p>
+                        <a href="简历中英文整合.pdf" class="cv-download" download><i class="fas fa-download"></i> Download CV</a>
+                    </div>
+                </div>
+            </div>
+            <div class="more-about">
+                <div class="three-columns">
+                    <div class="column research glass-effect">
+                        <h4 class="research-title">Current Research</h4>
+                        <div class="content-box">
+                            <p>I'm currently doing my research in <a href="https://www.yttrilab.com/" target="_blank">Yttri Lab</a>.</p>
+                            <div class="research-description">
+                                <p>My research focuses on neural mechanisms of movement and decision-making, using advanced neurotechnologies and data analysis.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column dog glass-effect">
+                        <h4>My Dog</h4>
+                        <div class="content-box">
+                            <img src="images/淘淘.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;">
+                            <div class="dog-description">
+                                <p>Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Poodle & Bichon mix<br>淘淘是一只非常可爱的泰迪和比熊混血狗狗，陪伴我成长多年。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column travel glass-effect" onclick="window.location.href='travel.html'" style="cursor:pointer;">
+                        <h4>Photo Dump</h4>
+                        <div class="content-box">
+                            <p>Click to see more of my photos!</p>
+                        </div>
                     </div>
                 </div>
             </div>
