--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <span>xingtongl@andrew.cmu.edu</span>
+                    <a href="mailto:xingtongl@andrew.cmu.edu">xingtongl@andrew.cmu.edu</a>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
