--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="glass-effect">
-        <nav>
+        <nav style="background:#13294B;">
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="index.html" class="nav-link">Home</a>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="more-about">
-                <div class="three-columns">
+                <div class="three-columns" style="display:flex;gap:2rem;flex-wrap:nowrap;justify-content:center;">
                     <div class="column research glass-effect">
                         <h4 class="research-title">Current Research</h4>
                         <div class="content-box">
@@ -61,7 +61,7 @@
                         <div class="content-box">
                             <img src="images/淘淘.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;">
                             <div class="dog-description">
-                                <p>Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Poodle & Bichon mix<br>淘淘是一只非常可爱的泰迪和比熊混血狗狗，陪伴我成长多年。</p>
+                                <p>Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Poodle & Bichon mix<br></p>
                             </div>
                         </div>
                     </div>
