--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="glass-effect">
-        <nav>
+        <nav style="background:#13294B;">
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="index.html" class="nav-link active">Home</a>
@@ -31,112 +31,35 @@
             </div>
         </nav>
     </header>
-
     <main>
         <section class="hero">
             <div class="hero-content" style="display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:0 auto;">
                 <div class="hero-text" style="flex:1;min-width:320px;">
                     <p class="welcome-text">Hi, welcome to</p>
-                    <h1 class="name" style="font-size:60px;font-family:'Playfair Display','Big Caslon',serif;font-weight:bold;">Xingtong Lin</h1>
+                    <h1 class="name" style="font-size:70px;font-family:'Playfair Display','Big Caslon',serif;font-weight:bold;">Xingtong Lin</h1>
                     <p class="world-text" style="font-size:1.5rem;margin-bottom:2rem;">'s world...</p>
                 </div>
                 <div class="profile-image" style="flex:0 0 320px;display:flex;justify-content:center;">
                     <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image" style="width:280px;height:280px;object-fit:cover;border-radius:50%;border:5px solid #fff;box-shadow:0 4px 24px rgba(0,0,0,0.18);">
                 </div>
             </div>
+            <div class="bio" style="max-width:700px;margin:2rem auto 0 auto;text-align:left;font-size:1.25rem;">
+                <p class="bio-en">I am a freshman at Carnegie Mellon University, a non-professional musician, a traveler, and an animal lover. I truly enjoy exploring my passions, building my academic skills, and solving problems to make the world a better place.</p>
+                <p class="bio-zh" style="display:none;">我是卡内基梅隆大学的大一学生，一名非专业音乐人、旅行者和动物爱好者。我热爱探索自己的兴趣，提升学术能力，并致力于为创造更美好的世界解决问题。</p>
+            </div>
         </section>
         <section style="text-align:center;margin-top:2rem;">
-            <p class="blessing" style="font-size:40px;font-family:'Playfair Display','Big Caslon',serif;font-weight:500;">May your future be filled with endless possibilities</p>
-            <p class="blessing-zh" style="font-size:40px;font-family:'SimHei','黑体',sans-serif;font-weight:500;display:none;">愿你得偿所愿</p>
-        </section>
-
-        <!-- Gallery部分暂时隐藏 -->
-        <!-- <section id="portfolio" class="portfolio glass-effect"> ... </section> -->
-
-        <section id="about" class="about glass-effect">
-            <div class="about-header">
-                <h2>About Me</h2>
-                <div class="basic-info">
-                    <div class="profile-section">
-                        <img src="images/profile.jpg" alt="Xingtong Lin" class="profile-image">
-                        <div class="info-text">
-                            <h3>Xingtong Lin</h3>
-                            <p>Carnegie Mellon University</p>
-                            <p>Class of 2028</p>
-                            <p>Neuroscience + Biomedical Technology (BME)</p>
-                            <a href="cv.pdf" class="cv-download" download>
-                                <i class="fas fa-download"></i> Download CV
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="more-about">
-                <h3>More About Me</h3>
-                <div class="three-columns">
-                    <div class="column research glass-effect">
-                        <h4 class="research-title">Current Research</h4>
-                        <div class="content-box">
-                            <p>I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a></p>
-                            <div class="research-description">
-                                <!-- 这里可以添加您的研究描述 -->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column dog glass-effect">
-                        <h4>My Dog</h4>
-                        <div class="content-box">
-                            <img src="images/dog.jpg" alt="My Dog" class="dog-image">
-                            <div class="dog-description">
-                                <!-- 这里可以添加您的狗狗介绍 -->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column travel glass-effect">
-                        <h4>Performing & Traveling</h4>
-                        <div class="content-box" onclick="window.location.href='travel.html'">
-                            <p>A collection of my performances and travel memories</p>
-                            <div class="travel-preview">
-                                <!-- 这里可以添加预览图片 -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="contact glass-effect">
-            <h2>Contact</h2>
-            <div class="contact-info">
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <span>xingtongl@andrew.cmu.edu</span>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <span>(+1) 412-608-5710 / (+86) 139-1096-9793</span>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/lxt/" target="_blank">LinkedIn Profile</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-instagram"></i>
-                    <a href="https://www.instagram.com/louisalxt" target="_blank">@louisalxt</a>
-                </div>
+            <div class="blessing-row" style="font-size:40px;font-family:'Playfair Display','Big Caslon',serif;font-weight:500;display:flex;justify-content:center;gap:2rem;align-items:center;">
+                <span class="blessing">May your future be filled with endless possibilities</span>
+                <span class="blessing-zh" style="font-family:'SimHei','黑体',sans-serif;display:none;">愿你得偿所愿</span>
             </div>
         </section>
     </main>
-
     <footer class="glass-effect">
         <div class="footer-content">
             <p class="copyright">© 2024 Xingtong Lin. All rights reserved.</p>
         </div>
     </footer>
-
     <script src="js/main.js"></script>
 </body>
 </html> 
