--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="glass-effect">
-        <nav>
+        <nav style="background:#13294B;">
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="index.html" class="nav-link">Home</a>
@@ -58,7 +58,7 @@
         <div class="footer-content">
             <p class="blessing">May your future be filled with endless possibilities</p>
             <p class="blessing-zh" style="display:none;">愿你得偿所愿</p>
-            <p class="copyright">© 2024 Xingtong Lin. All rights reserved.</p>
+            <p class="copyright">© 2025 Xingtong Lin. All rights reserved.</p>
         </div>
     </footer>
     <script src="js/main.js"></script>
