--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="glass-effect">
-        <nav style="background:#13294B;">
+        <nav style="background:linear-gradient(90deg,#3a3f51 0%,#6a82fb 100%);">
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="index.html" class="nav-link">Home</a>
@@ -48,16 +48,16 @@
             <div class="more-about">
                 <div class="three-columns" style="display:flex;gap:2rem;flex-wrap:nowrap;justify-content:center;">
                     <div class="column research glass-effect">
-                        <h4 class="research-title">Current Research</h4>
+                        <h4 class="research-title" style="text-align:center;font-weight:bold;">Current Research</h4>
                         <div class="content-box">
-                            <p>I'm currently doing my research in <a href="https://www.yttrilab.com/" target="_blank">Yttri Lab</a>.</p>
+                            <p>I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a>.</p>
                             <div class="research-description">
                                 <p>My research focuses on neural mechanisms of movement and decision-making, using advanced neurotechnologies and data analysis.</p>
                             </div>
                         </div>
                     </div>
                     <div class="column dog glass-effect">
-                        <h4>My Dog</h4>
+                        <h4 style="text-align:center;font-weight:bold;">My Dog</h4>
                         <div class="content-box">
                             <img src="images/淘淘.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;">
                             <div class="dog-description">
@@ -66,9 +66,9 @@
                         </div>
                     </div>
                     <div class="column travel glass-effect" onclick="window.location.href='travel.html'" style="cursor:pointer;">
-                        <h4>Photo Dump</h4>
+                        <h4 style="text-align:center;font-weight:bold;">Photo Dump</h4>
                         <div class="content-box">
-                            <p>Click to see more of my photos!</p>
+                            <p>Click to learn more about me！</p>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
         <div class="footer-content">
             <p class="blessing">May your future be filled with endless possibilities</p>
             <p class="blessing-zh" style="display:none;">愿你得偿所愿</p>
-            <p class="copyright">© 2024 Xingtong Lin. All rights reserved.</p>
+            <p class="copyright">© 2025 Xingtong Lin. All rights reserved.</p>
         </div>
     </footer>
     <script src="js/main.js"></script>
