--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="glass-effect">
-        <nav style="background:#13294B;">
+        <nav style="background:linear-gradient(90deg,#3a3f51 0%,#6a82fb 100%);">
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="index.html" class="nav-link">Home</a>
@@ -41,7 +41,10 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
-                    <span>(+1) 412-608-5710 / (+86) 139-1096-9793</span>
+                    <div style="display:flex;flex-direction:column;">
+                        <span>(+1) 412-608-5710</span>
+                        <span>(+86) 139-1096-9793</span>
+                    </div>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
