--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="glass-effect">
-        <nav style="background:#13294B;">
+        <nav style="background:linear-gradient(90deg,#3a3f51 0%,#6a82fb 100%);">
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="index.html" class="nav-link active">Home</a>
@@ -49,7 +49,7 @@
             </div>
         </section>
         <section style="text-align:center;margin-top:2rem;">
-            <div class="blessing-row" style="font-size:35px;font-family:'Playfair Display','Big Caslon',serif;font-weight:500;display:flex;justify-content:center;gap:2rem;align-items:center;">
+            <div class="blessing-row" style="font-size:35px;font-family:'Playfair Display','Big Caslon',serif;font-weight:500;display:inline-flex;justify-content:center;gap:2rem;align-items:center;white-space:nowrap;">
                 <span class="blessing">May your future be filled with endless possibilities</span>
                 <span class="blessing-zh" style="font-family:'SimHei','黑体',sans-serif;display:none;">愿你得偿所愿</span>
             </div>
