--- a/about.html
+++ b/about.html
@@ -37,38 +37,75 @@
                 <div class="profile-section">
                     <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image" style="width:200px;height:200px;object-fit:cover;border-radius:50%;border:4px solid #fff;">
                     <div class="info-text">
-                        <h3 class="about-name"><span class="en">Xingtong (Louisa) Lin</span><span class="zh" style="display:none;">林星潼 (Louisa)</span></h3>
-                        <p class="about-school"><span class="en">Carnegie Mellon University</span><span class="zh" style="display:none;">卡内基梅隆大学</span></p>
-                        <p class="about-year"><span class="en">Class of 2028</span><span class="zh" style="display:none;">2028届</span></p>
-                        <p class="about-major"><span class="en">Neuroscience + Biomedical Technology (BME)</span><span class="zh" style="display:none;">神经科学 + 生物医学工程</span></p>
-                        <a href="简历中英文整合.pdf" class="cv-download" download><i class="fas fa-download"></i> <span class="en">Download CV</span><span class="zh" style="display:none;">下载简历</span></a>
+                        <h3 class="about-name">
+                            <span class="en">Xingtong (Louisa) Lin</span>
+                            <span class="zh" style="display:none;">林星潼 (Louisa)</span>
+                        </h3>
+                        <p class="about-school">
+                            <span class="en">Carnegie Mellon University</span>
+                            <span class="zh" style="display:none;">卡内基梅隆大学</span>
+                        </p>
+                        <p class="about-year">
+                            <span class="en">Class of 2028</span>
+                            <span class="zh" style="display:none;">2028届</span>
+                        </p>
+                        <p class="about-major">
+                            <span class="en">Neuroscience + Biomedical Technology (BME)</span>
+                            <span class="zh" style="display:none;">神经科学 + 生物医学工程</span>
+                        </p>
+                        <a href="简历中英文整合.pdf" class="cv-download" download>
+                            <i class="fas fa-download"></i>
+                            <span class="en">Download CV</span>
+                            <span class="zh" style="display:none;">下载简历</span>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="more-about">
                 <div class="three-columns" style="display:flex;gap:2rem;flex-wrap:nowrap;justify-content:center;">
                     <div class="column research glass-effect">
-                        <h4 class="research-title" style="text-align:center;font-weight:bold;"><span class="en">Current Research</span><span class="zh" style="display:none;">当前研究</span></h4>
+                        <h4 class="research-title" style="text-align:center;font-weight:bold;">
+                            <span class="en">Current Research</span>
+                            <span class="zh" style="display:none;">当前研究</span>
+                        </h4>
                         <div class="content-box">
-                            <p><span class="en">I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a>.</span><span class="zh" style="display:none;">我目前在 <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a> 进行研究。</span></p>
+                            <p>
+                                <span class="en">I'm currently doing my research in <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a>.</span>
+                                <span class="zh" style="display:none;">我目前在 <a href="https://labs.bio.cmu.edu/yttri/" target="_blank">Yttri Lab</a> 进行研究。</span>
+                            </p>
                             <div class="research-description">
-                                <p><span class="en">My research focuses on neural mechanisms of movement and decision-making, using advanced neurotechnologies and data analysis.</span><span class="zh" style="display:none;">我的研究聚焦于运动与决策的神经机制，使用先进的神经技术与数据分析。</span></p>
+                                <p>
+                                    <span class="en">My research focuses on neural mechanisms of movement and decision-making, using advanced neurotechnologies and data analysis.</span>
+                                    <span class="zh" style="display:none;">我的研究聚焦于运动与决策的神经机制，使用先进的神经技术与数据分析。</span>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="column dog glass-effect">
-                        <h4 style="text-align:center;font-weight:bold;"><span class="en">My Dog</span><span class="zh" style="display:none;">我的狗狗</span></h4>
+                        <h4 style="text-align:center;font-weight:bold;">
+                            <span class="en">My Dog</span>
+                            <span class="zh" style="display:none;">我的狗狗</span>
+                        </h4>
                         <div class="content-box">
                             <img src="images/淘淘.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;">
                             <div class="dog-description">
-                                <p><span class="en">Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Teddy & Bichon mix<br></span><span class="zh" style="display:none;">名字：淘淘<br>生日：2013年3月15日<br>品种：泰迪和比熊混血<br></span></p>
+                                <p>
+                                    <span class="en">Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Teddy & Bichon mix<br></span>
+                                    <span class="zh" style="display:none;">名字：淘淘<br>生日：2013年3月15日<br>品种：泰迪和比熊混血<br></span>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="column travel glass-effect" onclick="window.location.href='travel.html'" style="cursor:pointer;">
-                        <h4 style="text-align:center;font-weight:bold;"><span class="en">Photo Dump</span><span class="zh" style="display:none;">照片轰炸</span></h4>
+                        <h4 style="text-align:center;font-weight:bold;">
+                            <span class="en">Photo Dump</span>
+                            <span class="zh" style="display:none;">照片轰炸</span>
+                        </h4>
                         <div class="content-box">
-                            <p><span class="en">Click to learn more about me！</span><span class="zh" style="display:none;">点击查看更多照片！</span></p>
+                            <p>
+                                <span class="en">Click to learn more about me！</span>
+                                <span class="zh" style="display:none;">点击查看更多照片！</span>
+                            </p>
                         </div>
                     </div>
                 </div>
