--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                             <div class="research-description">
                                 <p>
                                     <span class="en">My research focuses on neural mechanisms of movement and decision-making, using advanced neurotechnologies and data analysis.</span>
-                                    <span class="zh" style="display:none;">我的研究聚焦于运动与决策的神经机制，使用先进的神经技术与数据分析。</span>
+                                    <span class="zh" style="display:none;">我的研究聚焦于运动与连续性决策的神经机制，使用先进的神经技术来解析神经数据。</span>
                                 </p>
                             </div>
                         </div>
