--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
         <section class="hero">
             <div class="hero-content" style="display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:0 auto;">
                 <div class="hero-text" style="flex:1;min-width:320px;">
-                    <p class="welcome-text">Hi, welcome to</p>
-                    <h1 class="name" style="font-size:70px;font-family:'Playfair Display','Big Caslon',serif;font-weight:bold;">Xingtong Lin</h1>
-                    <p class="world-text" style="font-size:1.5rem;margin-bottom:2rem;">'s world...</p>
+                    <p class="welcome-text">
+                        <span class="en">Hi, welcome to</span>
+                        <span class="zh" style="display:none;">你好，欢迎来到</span>
+                    </p>
+                    <h1 class="name" style="font-size:70px;font-family:'Times New Roman',serif;font-weight:bold;">
+                        <span class="en">Xingtong Lin</span>
+                        <span class="zh" style="display:none;">林星潼</span>
+                    </h1>
+                    <p class="world-text" style="font-size:1.5rem;margin-bottom:2rem;">
+                        <span class="en">'s world...</span>
+                        <span class="zh" style="display:none;">的世界...</span>
+                    </p>
                 </div>
                 <div class="profile-image" style="flex:0 0 320px;display:flex;justify-content:center;">
                     <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image" style="width:280px;height:280px;object-fit:cover;border-radius:50%;border:5px solid #fff;box-shadow:0 4px 24px rgba(0,0,0,0.18);">
