--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <div class="info-text">
                         <h3 class="about-name">
                             <span class="en">Xingtong (Louisa) Lin</span>
-                            <span class="zh" style="display:none;">林星潼 (Louisa)</span>
+                            <span class="zh" style="display:none;">林星潼</span>
                         </h3>
                         <p class="about-school">
                             <span class="en">Carnegie Mellon University</span>
