--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </div>
             </div>
             <div class="bio" style="max-width:700px;margin:2rem auto 0 auto;text-align:left;font-size:1.25rem;">
-                <p class="bio-en">Hi! I'm Xingtong! You can also call me Louisa if you want. I am a freshman at Carnegie Mellon University, a non-professional musician, a traveler, and an animal lover. I truly enjoy exploring my passions, building my academic skills, and solving problems to make the world a better place.</p>
-                <p class="bio-zh" style="display:none;">你好！我是林星潼，也可以叫我Louisa。我是卡内基梅隆大学的大一学生，一名非专业音乐人、旅行者和动物爱好者。我热爱探索自己的兴趣，提升学术能力，并致力于为创造更美好的世界解决问题。</p>
+                <p class="bio-en en">Hi! I'm Xingtong! You can also call me Louisa if you want. I am a freshman at Carnegie Mellon University, a non-professional musician, a traveler, and an animal lover. I truly enjoy exploring my passions, building my academic skills, and solving problems to make the world a better place.</p>
+                <p class="bio-zh zh" style="display:none;">你好！我是林星潼，也可以叫我Louisa。我是卡内基梅隆大学的大一学生，一名非专业音乐人、旅行者和动物爱好者。我热爱探索自己的兴趣，提升学术能力，并致力于为创造更美好的世界解决问题。</p>
             </div>
         </section>
         <section style="text-align:center;margin-top:2rem;">
