--- a/about.html
+++ b/about.html
@@ -86,8 +86,8 @@
                             <span class="en">My Dog</span>
                             <span class="zh" style="display:none;">我的狗狗</span>
                         </h4>
-                        <div class="content-box">
-                            <img src="images/淘淘.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;">
+                        <div class="content-box" style="text-align:center;">
+                            <img src="images/your-latest-dog.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;margin-bottom:1rem;display:inline-block;">
                             <div class="dog-description">
                                 <p>
                                     <span class="en">Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Teddy & Bichon mix<br></span>
