--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <div class="info-text">
                         <h3 class="about-name">
                             <span class="en">Xingtong (Louisa) Lin</span>
-                            <span class="zh" style="display:none;">林星潼</span>
+                            <span class="zh" style="display:none;">林星潼 (Louisa)</span>
                         </h3>
                         <p class="about-school">
                             <span class="en">Carnegie Mellon University</span>
@@ -76,7 +76,7 @@
                             <div class="research-description">
                                 <p>
                                     <span class="en">My research focuses on neural mechanisms of movement and decision-making, using advanced neurotechnologies and data analysis.</span>
-                                    <span class="zh" style="display:none;">我的研究聚焦于运动与连续性决策的神经机制，使用先进的神经技术来解析神经数据。</span>
+                                    <span class="zh" style="display:none;">我的研究聚焦于运动与决策的神经机制，使用先进的神经技术与数据分析。</span>
                                 </p>
                             </div>
                         </div>
@@ -86,8 +86,8 @@
                             <span class="en">My Dog</span>
                             <span class="zh" style="display:none;">我的狗狗</span>
                         </h4>
-                        <div class="content-box" style="text-align:center;">
-                            <img src="images/your-latest-dog.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;margin-bottom:1rem;display:inline-block;">
+                        <div class="content-box">
+                            <img src="images/淘淘.jpg" alt="My Dog" class="dog-image" style="width:120px;height:120px;object-fit:cover;border-radius:50%;border:3px solid #fff;">
                             <div class="dog-description">
                                 <p>
                                     <span class="en">Name: Taotao<br>Birthday: March 15, 2013<br>Breed: Teddy & Bichon mix<br></span>
