--- a/index.html
+++ b/index.html
@@ -35,26 +35,17 @@
         <section class="hero">
             <div class="hero-content" style="display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:0 auto;">
                 <div class="hero-text" style="flex:1;min-width:320px;">
-                    <p class="welcome-text">
-                        <span class="en">Hi, welcome to</span>
-                        <span class="zh" style="display:none;">你好，欢迎来到</span>
-                    </p>
-                    <h1 class="name" style="font-size:70px;font-family:'Times New Roman',serif;font-weight:bold;">
-                        <span class="en">Xingtong Lin</span>
-                        <span class="zh" style="display:none;">林星潼</span>
-                    </h1>
-                    <p class="world-text" style="font-size:1.5rem;margin-bottom:2rem;">
-                        <span class="en">'s world...</span>
-                        <span class="zh" style="display:none;">的世界...</span>
-                    </p>
+                    <p class="welcome-text">Hi, welcome to</p>
+                    <h1 class="name" style="font-size:70px;font-family:'Playfair Display','Big Caslon',serif;font-weight:bold;">Xingtong Lin</h1>
+                    <p class="world-text" style="font-size:1.5rem;margin-bottom:2rem;">'s world...</p>
                 </div>
                 <div class="profile-image" style="flex:0 0 320px;display:flex;justify-content:center;">
                     <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image" style="width:280px;height:280px;object-fit:cover;border-radius:50%;border:5px solid #fff;box-shadow:0 4px 24px rgba(0,0,0,0.18);">
                 </div>
             </div>
             <div class="bio" style="max-width:700px;margin:2rem auto 0 auto;text-align:left;font-size:1.25rem;">
-                <p class="bio-en en">Hi! I'm Xingtong! You can also call me Louisa if you want. I am a freshman at Carnegie Mellon University, a non-professional musician, a traveler, and an animal lover. I truly enjoy exploring my passions, building my academic skills, and solving problems to make the world a better place.</p>
-                <p class="bio-zh zh" style="display:none;">你好！我是林星潼，也可以叫我Louisa。我是卡内基梅隆大学的大一学生，一名非专业音乐人、旅行者和动物爱好者。我热爱探索自己的兴趣，提升学术能力，并致力于为创造更美好的世界解决问题。</p>
+                <p class="bio-en">Hi! I'm Xingtong! You can also call me Louisa if you want. I am a freshman at Carnegie Mellon University, a non-professional musician, a traveler, and an animal lover. I truly enjoy exploring my passions, building my academic skills, and solving problems to make the world a better place.</p>
+                <p class="bio-zh" style="display:none;">你好！我是林星潼，也可以叫我Louisa。我是卡内基梅隆大学的大一学生，一名非专业音乐人、旅行者和动物爱好者。我热爱探索自己的兴趣，提升学术能力，并致力于为创造更美好的世界解决问题。</p>
             </div>
         </section>
         <section style="text-align:center;margin-top:2rem;">
