--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <div class="profile-section">
                     <img src="images/profile.jpg" alt="Xingtong Lin" class="circular-image" style="width:200px;height:200px;object-fit:cover;border-radius:50%;border:4px solid #fff;">
                     <div class="info-text">
-                        <h3 class="about-name"><span class="en">Xingtong (Louisa) Lin</span><span class="zh" style="display:none;">林星潼 (Louisa)</span></h3>
+                        <h3 class="about-name"><span class="en">Xingtong (Louisa) Lin</span><span class="zh" style="display:none;">林星潼</span></h3>
                         <p class="about-school"><span class="en">Carnegie Mellon University</span><span class="zh" style="display:none;">卡内基梅隆大学</span></p>
                         <p class="about-year"><span class="en">Class of 2028</span><span class="zh" style="display:none;">2028届</span></p>
                         <p class="about-major"><span class="en">Neuroscience + Biomedical Technology (BME)</span><span class="zh" style="display:none;">神经科学 + 生物医学工程</span></p>
